# dartbrains-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/dartbrains_tools/: __init__.py  bids.py  mr_simulations.py  mr_widgets.py  notebook_utils.py
src/dartbrains_tools/js/: compass_widget.js  convolution_widget.js  cost_function_widget.js  encoding_widget.js  kspace_widget.js  net_magnetization_widget.js  precession_widget.js  smoothing_widget.js  spin_ensemble_widget.js  transform_cube_widget.js
tests/: test_bids.py  test_data.py  test_imports.py  test_notebook_utils.py  test_widgets.py
